<resources>
    <string name="app_name">TextAuto</string>
    <string name="addtexttitle">Add a Text Request</string>
    <string name="StringTextHint">Type Text here</string>
    <string name="Confirm">Confirm\n</string>
    <string name="AddConditionButton">Add a Condition</string>
    <string name="PickDate">Pick a Date</string>
    <string name="PickTime">Pick a Time</string>
    <string name="selectcontact">Select Contact</string>
    <string name="currentcontact">Current Contact: %s</string>
    <string name="deleteallentries">Delete All Entries</string>
</resources>